    - Updated one place in the manual that referred to fn documents to reflect
      above change.
    - Document rescue mode in ia64 boot screens, but don't add stanzas for it
      since that would go over the limit of 16. Users will have to type
      rescue/enable=true
    - Add stanzas for rescue mode and document in sparc boot screen.
  * Kurt Roeckx
    - Changed libdevmapper1.00-udeb to libdevmapper1.01-udeb in the monolithic
      package list.
  * Christian Perrier
    - Add the list of needed characters for Kazakh
    - Add the list of needed characters for Vietnamese
  * Colin Watson
    - Force HOME=$(TEMP) for hfsutils calls throughout powerpc
      hd_media_common target.
    - Ship yaboot with powerpc hd-media images.
    - Add rescue stanzas to yaboot configuration files.
    - Document raised kernel command-line limits in 2.6.9.
    - Remove devfs=mount from yaboot configuration files. It shouldn't be
      needed any more.
  * Frans Pop
    - Fix logic error in build/util/pkg-list to get rid of incorrect warnings
      about missing lists.

 -- Frans Pop <aragorn@tiscali.nl>  Thu, 28 Apr 2005 20:47:19 +0200

debian-installer (2005xxxx) UNRELEASED; urgency=low

  * Frans Pop
    - Add build dependencies needed to build PDF/TXT versions of the manual
    - Make main build script for the manual fail on errors
  * Joey Hess
    - Copyright file updates for 2005.

 -- Frans Pop <aragorn@tiscali.nl>  Thu, 24 Mar 2005 01:12:46 +0100

debian-installer (20050317) unstable; urgency=low

  * Frans Pop
    - Add German and Russian for official builds of the manual
    - Add PDF and TXT formats for official builds of the manual
  * Martin Michlmayr
    - Mention rootdev in the ARM manual, thanks Kyle McMartin.
    - Use the correct TFTP filename for ARM Netwinder.
    - Remove bogus information about noinitrd option from ARM manual.
    - Mention option needed for serial console installations on
      ARM Netwinder, thanks thanks Kyle McMartin.
