@@ -61,9 +61,10 @@ the Internet at <ulink url="&url-example-preseed;"></ulink>.
 # installer). If these numbers are exceeded, 2.4 kernels will drop any
 # excess options and 2.6 kernels will panic. With kernel 2.6.9 or newer,
 # you can use 32 command line options and 32 environment options.
-# Some of the default options, like 'vga=normal' and 'devfs=mount' may be
-# safely removed for most installations, which may allow you to add more
-# options for preseeding.
+#
+# Some of the default options, like 'devfs=mount' may be safely removed
+# for most installations, which may allow you to add more options for
+# preseeding.
 
 #### Shell commands.
 
