@@ -58,6 +58,7 @@ debian-installer (trunk) UNRELEASED; urgency=low
       since that would go over the limit of 16. Users will have to type
       rescue/enable=true
     - Add stanzas for rescue mode and document in sparc boot screen.
+    - Remove devfs=mount from syslinux.cfg. Needs rootskel-bootfloppy 1.13.
   * Kurt Roeckx
     - Changed libdevmapper1.00-udeb to libdevmapper1.01-udeb in the monolithic
       package list.
